changed color to avoid contrast problem

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1881,7 +1881,7 @@ blockquote small {
     display: block;
     font-size: 80%;
     line-height: 1.42857143;
-    color: #777
+    color: #000
 }
 
 blockquote .small:before,
